<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.MoreFragment">

    <!-- TODO: Update blank fragment layout -->
    <!--  Header  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_130sdp"
        android:paddingTop="@dimen/_30sdp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_blue_radius">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/profil_wh"/>
        <LinearLayout
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name User"
                android:textSize="@dimen/_18ssp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="emailuser4@mail.com"
                android:textSize="@dimen/_14ssp"/>
        </LinearLayout>

    </LinearLayout>
    <!--    Group menu profile    -->
        <LinearLayout
            android:id="@+id/menu_edtprof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_person"
                android:contentDescription="@string/ic_prof_desc"
                app:tint="@color/black" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>

        <!--    Group menu setting    -->
<!--        <LinearLayout-->
<!--            android:id="@+id/setting"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/_10sdp"-->
<!--            android:orientation="horizontal"-->
<!--            android:gravity="center"-->
<!--            android:padding="@dimen/_10sdp"-->
<!--            tools:ignore="UseCompoundDrawables">-->
<!--            <ImageView-->
<!--                android:layout_width="@dimen/_20sdp"-->
<!--                android:layout_height="@dimen/_20sdp"-->
<!--                android:layout_marginStart="@dimen/_5sdp"-->
<!--                android:layout_marginEnd="@dimen/_15sdp"-->
<!--                android:src="@drawable/ic_settings"-->
<!--                android:contentDescription="@string/ic_set_desc"-->
<!--                app:tint="@color/black" />-->
<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/setting"-->
<!--                android:textSize="@dimen/_18ssp"-->
<!--                android:textColor="@color/black"-->
<!--                android:textStyle="bold"/>-->
<!--        </LinearLayout>-->

        <!--    Group menu help    -->
        <LinearLayout
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_help"
                android:contentDescription="@string/ic_help_desc"
                app:tint="@color/black" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>

    <!--    Group menu about us    -->
        <LinearLayout
            android:id="@+id/about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_info"
                android:contentDescription="@string/ic_info_desc"
                app:tint="@color/black" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>
</LinearLayout>